--- a/Modules/Edu/vue/css/app.css
+++ b/Modules/Edu/vue/css/app.css
@@ -12,7 +12,7 @@ html {
 body {
     /* font-size: inherit !important; */
     /* font-size: 1rem !important; */
-    background-color: #f2f4f6 !important;
+    background-color: #fffefc !important;
 }
 
 [v-cloak] {
