--- a/Modules/Edu/vue/css/app.css
+++ b/Modules/Edu/vue/css/app.css
@@ -3,16 +3,11 @@
 @tailwind utilities;
 @tailwind screens;
 html {
-    font-family: 'pingfang SC', 'helvetica neue', arial, 'hiragino sans gb', 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif, -apple-system,
-        BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Liberation Sans', 'PingFang SC',
-        'Microsoft YaHei', 'Hiragino Sans GB', 'Wenquanyi Micro Hei', 'WenQuanYi Zen Hei', 'ST Heiti', SimHei, SimSun, 'WenQuanYi Zen Hei Sharp', sans-serif !important;
-
-    /* font-family: 'Jetbrains Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace; */
+    font-family: -apple-system, BlinkMacSystemFont, SF UI Text, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial,
+        sans-serif !important;
 }
 body {
-    /* font-size: inherit !important; */
-    /* font-size: 1rem !important; */
-    background-color: #fffefc !important;
+    background-color: #e8ebed !important;
 }
 
 [v-cloak] {
